# pixiv.rs

./: .gitignore  Cargo.toml
projects/pixiv-api/: Cargo.toml
projects/pixiv-api/src/: lib.rs
projects/pixiv-api/src/artworks/: mod.rs
projects/pixiv-api/src/artworks/filters/: mod.rs
projects/pixiv-api/src/artworks/images/: mod.rs
projects/pixiv-api/src/artworks/tags/: mod.rs
projects/pixiv-api/src/errors/: convert.rs  display.rs  mod.rs
projects/pixiv-api/tests/: main.rs
projects/pixiv-downloader/: Cargo.toml
projects/pixiv-downloader/src/: main.rs
