[package]
name = "pixiv"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A "
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[dependencies.pixiv-api]
path = "../pixiv-api"
version = "0.0.0"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
